cargo_check_cuda.txt
   Compiling vswhom-sys v0.1.3
   Compiling ring v0.17.14
   Compiling bindgen v0.69.5
   Compiling libsqlite3-sys v0.35.0
   Compiling vswhom v0.1.0
   Compiling embed-resource v3.0.6
   Compiling rustls v0.23.36
   Compiling tauri-winres v0.3.5
   Compiling tauri-build v2.5.3
    Checking rusqlite v0.37.0
    Checking rustls-webpki v0.103.9
    Checking rusqlite_migration v2.3.0
   Compiling tauri v2.9.5
   Compiling aivorelay v0.7.9 (C:\Code\Released Software\AIVORelay\src-tauri)
   Compiling tauri-plugin-fs v2.4.5
   Compiling tauri-plugin-opener v2.5.3
   Compiling tauri-plugin-store v2.4.2
   Compiling tauri-plugin-os v2.3.2
   Compiling tauri-plugin-process v2.3.1
   Compiling tauri-plugin-macos-permissions v2.3.0
   Compiling tauri-plugin-clipboard-manager v2.3.2
   Compiling tauri-plugin-autostart v2.5.1
   Compiling tauri-plugin-global-shortcut v2.3.1
   Compiling tauri-plugin-log v2.8.0
   Compiling tauri-plugin-updater v2.9.0
   Compiling tauri-plugin-dialog v2.6.0
   Compiling whisper-rs-sys v0.11.1
warning: aivorelay@0.7.9: Generated tray translations: 14 languages, 5 fields
    Checking tokio-rustls v0.26.4
    Checking hyper-rustls v0.27.7
    Checking reqwest v0.12.28
    Checking tauri-plugin-single-instance v2.3.7
    Checking tauri-specta v2.0.0-rc.21
   Compiling whisper-rs v0.13.2
error[E0080]: evaluation of constant value failed
   --> C:\Code\Released Software\AIVORelay\src-tauri\target\debug\build\whisper-rs-sys-7ed0cb72cfda6839\out/bindings.rs:321:27
    |
321 |     ["Size of _G_fpos_t"][::std::mem::size_of::<_G_fpos_t>() - 16usize];
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `12_usize - 16_usize`, which would overflow

error[E0080]: evaluation of constant value failed
   --> C:\Code\Released Software\AIVORelay\src-tauri\target\debug\build\whisper-rs-sys-7ed0cb72cfda6839\out/bindings.rs:335:29
    |
335 |     ["Size of _G_fpos64_t"][::std::mem::size_of::<_G_fpos64_t>() - 16usize];
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `12_usize - 16_usize`, which would overflow

error[E0080]: evaluation of constant value failed
   --> C:\Code\Released Software\AIVORelay\src-tauri\target\debug\build\whisper-rs-sys-7ed0cb72cfda6839\out/bindings.rs:395:26
    |
395 |     ["Size of _IO_FILE"][::std::mem::size_of::<_IO_FILE>() - 216usize];
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `208_usize - 216_usize`, which would overflow

For more information about this error, try `rustc --explain E0080`.
error: could not compile `whisper-rs-sys` (lib) due to 3 previous errors
